# Qt-Academy

./: README.md
QML for Beginners/FluidElementsAndAnimation/: CMakeLists.txt  Main.qml  main.cpp
QML for Beginners/FluidElementsAndAnimation-Challenge/: ActiveLayer.qml  AppLauncher.qml  AppMenuItem.qml  AppModel.qml  AppWindow.qml  CMakeLists.txt  Main.qml  main.cpp
QML for Beginners/FluidElementsAndAnimation-Challenge/images/: attribution.txt
QML for Beginners/IntroToQML/: CMakeLists.txt  Main.qml  PassByReference.qml  PassByValue.qml  script.mjs  square.mjs
QML for Beginners/IntroToQML-Challenge/: CMakeLists.txt  Main.qml
QML for Beginners/IntroToQtQuick/: CMakeLists.txt  Main.qml
QML for Beginners/IntroToQtQuick-Challenge/: CMakeLists.txt  Main.qml
QML for Beginners/IntroToQtQuick-Challenge/.kdev4/: StartingProject.kdev4
QML for Beginners/IntroToQtQuickControls/: CMakeLists.txt  ClimateControls.qml  Main.qml  ZoneControls.qml  main.cpp
QML for Beginners/IntroToQtQuickControls-Challenge/: CMakeLists.txt  Main.qml  MenuLabel.qml  MenuSection.qml
QML for Beginners/ModelViewDelegate/: CMakeLists.txt  Main.qml  main.cpp
QML for Beginners/ModelViewDelegate-Challenge/: CMakeLists.txt  FrequencyBandModel.qml  LED.qml  LEDBar.qml  Main.qml
QML for Beginners/PositionersAndLayouts/: CMakeLists.txt  Main.qml  main.cpp
QML for Beginners/PositionersAndLayouts-Challenge/: Backend.qml  CMakeLists.txt  ChatBubble.qml  ChatFlickable.qml  ChatFooter.qml  ChatHeader.qml  ChatList.qml  GradientBackground.qml  Main.qml  main.cpp
QML for Beginners/QMLBestPractice-Challenge/: Book.qml  BookPage.qml  CMakeLists.txt  Chapter.cpp  Chapter.h  DarkModeSwitch.qml  FontSizeSlider.qml  GreatNightIn.qml  Main.qml  SettingsButton.qml  Theme.qml  main.cpp
QML for Beginners/QmlDebugging-Challenge/: CMakeLists.txt  Main.qml  main.cpp
Qt Development Framework/how-to-expose-c-to-qml/: LumberMillBlock.qml  lumbersawcontroller.cpp  lumbersawcontroller.h  main.qml
Qt Development Framework/how-to-set-a-parent-to-an-object/: CMakeLists.txt  customclass.cpp  customclass.h  main.cpp
Qt Development Framework/qt-property-system/: LumberMillBlock.qml  main.cpp
Qt Development Framework/use-connect-to-implement-Signals-And-Slots/: .clang-format  LumberMillBlock.qml  lumbersawcontroller.cpp  lumbersawcontroller.h
Qt Framework Overview/QObject/: CMakeLists.txt  main.cpp  myqobject.cpp  myqobject.h  myqobject1.cpp  myqobject1.h  myqobject2.cpp  myqobject2.h  myqobject3.cpp  myqobject3.h
Qt Framework Overview/SignalsAndHandlers/: CMakeLists.txt  Main.qml  main.cpp
Qt Framework Overview/SignalsAndSlots/: CMakeLists.txt  main.cpp  myclass.cpp  myclass.h  receiver.cpp  receiver.h  sender.cpp  sender.h
