cmake_minimum_required(VERSION 3.16)

project(SignalsAndHandlers VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 26)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Quick)

qt_standard_project_setup(REQUIRES 6.8)

qt_add_executable(appSignalsAndHandlers
    main.cpp
)

qt_add_qml_module(appSignalsAndHandlers
    URI SignalsAndHandlers
    QML_FILES
        Main.qml
)

target_link_libraries(appSignalsAndHandlers
    PRIVATE Qt6::Quick
)
